BloonParser.py
# Generated from Bloon.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BloonParser ( Parser ):

    grammarFileName = "Bloon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'main'", "'('", "')'", 
                     "'class'", "'<'", "'inherits'", "'>'", "'{'", "'attributes'", 
                     "'methods'", "'}'", "'.'", "'vars'", "','", "':'", 
                     "'['", "']'", "'='", "'int'", "'float'", "'char'", 
                     "'+'", "'-'", "'*'", "'/'", "'void'", "'meth'", "'return'", 
                     "'read'", "'write'", "'cond'", "'then'", "'else'", 
                     "'while'", "'do'", "'floop'", "'to'", "'and'", "'or'", 
                     "'!'", "'<='", "'>='", "'=='", "'!='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "CONST_INT", 
                      "CONST_FLOAT", "CONST_STR", "WHITESPACE" ]

    RULE_program = 0
    RULE_program_t = 1
    RULE_main = 2
    RULE_r_class = 3
    RULE_class_t = 4
    RULE_class_k = 5
    RULE_class_j = 6
    RULE_class_l = 7
    RULE_class_p = 8
    RULE_var = 9
    RULE_var_t = 10
    RULE_var_k = 11
    RULE_var_dec = 12
    RULE_var_dec_t = 13
    RULE_var_dec_k = 14
    RULE_var_dec_p = 15
    RULE_arr_idx = 16
    RULE_arr_idx_t = 17
    RULE_arr = 18
    RULE_arr_t = 19
    RULE_assign = 20
    RULE_assign_t = 21
    RULE_var_type = 22
    RULE_assign_op = 23
    RULE_type_meth = 24
    RULE_statement = 25
    RULE_func = 26
    RULE_func_t = 27
    RULE_func_k = 28
    RULE_func_p = 29
    RULE_param = 30
    RULE_param_t = 31
    RULE_block = 32
    RULE_block_t = 33
    RULE_r_return = 34
    RULE_call = 35
    RULE_call_t = 36
    RULE_call_args = 37
    RULE_call_args_t = 38
    RULE_call_void = 39
    RULE_read = 40
    RULE_read_t = 41
    RULE_read_k = 42
    RULE_write = 43
    RULE_write_t = 44
    RULE_write_k = 45
    RULE_cond = 46
    RULE_cond_t = 47
    RULE_r_while = 48
    RULE_floop = 49
    RULE_super_exp = 50
    RULE_super_exp_t = 51
    RULE_expression = 52
    RULE_expression_t = 53
    RULE_exp = 54
    RULE_exp_t = 55
    RULE_term = 56
    RULE_term_t = 57
    RULE_factor = 58
    RULE_factor_t = 59
    RULE_var_const = 60

    ruleNames =  [ "program", "program_t", "main", "r_class", "class_t", 
                   "class_k", "class_j", "class_l", "class_p", "var", "var_t", 
                   "var_k", "var_dec", "var_dec_t", "var_dec_k", "var_dec_p", 
                   "arr_idx", "arr_idx_t", "arr", "arr_t", "assign", "assign_t", 
                   "var_type", "assign_op", "type_meth", "statement", "func", 
                   "func_t", "func_k", "func_p", "param", "param_t", "block", 
                   "block_t", "r_return", "call", "call_t", "call_args", 
                   "call_args_t", "call_void", "read", "read_t", "read_k", 
                   "write", "write_t", "write_k", "cond", "cond_t", "r_while", 
                   "floop", "super_exp", "super_exp_t", "expression", "expression_t", 
                   "exp", "exp_t", "term", "term_t", "factor", "factor_t", 
                   "var_const" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    ID=47
    CONST_INT=48
    CONST_FLOAT=49
    CONST_STR=50
    WHITESPACE=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BloonParser.ID, 0)

        def program_t(self):
            return self.getTypedRuleContext(BloonParser.Program_tContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = BloonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(BloonParser.T__0)
            self.state = 123
            self.match(BloonParser.ID)
            self.state = 124
            self.match(BloonParser.T__1)
            self.state = 125
            self.program_t()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_tContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def r_class(self):
            return self.getTypedRuleContext(BloonParser.R_classContext,0)


        def program_t(self):
            return self.getTypedRuleContext(BloonParser.Program_tContext,0)


        def var_dec(self):
            return self.getTypedRuleContext(BloonParser.Var_decContext,0)


        def func(self):
            return self.getTypedRuleContext(BloonParser.FuncContext,0)


        def main(self):
            return self.getTypedRuleContext(BloonParser.MainContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_program_t

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram_t" ):
                listener.enterProgram_t(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram_t" ):
                listener.exitProgram_t(self)




    def program_t(self):

        localctx = BloonParser.Program_tContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program_t)
        try:
            self.state = 137
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BloonParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.r_class()
                self.state = 128
                self.program_t()
                pass
            elif token in [BloonParser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.var_dec()
                self.state = 131
                self.program_t()
                pass
            elif token in [BloonParser.T__20, BloonParser.T__21, BloonParser.T__22, BloonParser.T__27, BloonParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.func()
                self.state = 134
                self.program_t()
                pass
            elif token in [BloonParser.T__2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.main()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(BloonParser.BlockContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = BloonParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(BloonParser.T__2)
            self.state = 140
            self.match(BloonParser.T__3)
            self.state = 141
            self.match(BloonParser.T__4)
            self.state = 142
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class R_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BloonParser.ID, 0)

        def class_t(self):
            return self.getTypedRuleContext(BloonParser.Class_tContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_r_class

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterR_class" ):
                listener.enterR_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitR_class" ):
                listener.exitR_class(self)




    def r_class(self):

        localctx = BloonParser.R_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_r_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(BloonParser.T__5)
            self.state = 145
            self.match(BloonParser.ID)
            self.state = 146
            self.class_t()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_tContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BloonParser.ID, 0)

        def class_k(self):
            return self.getTypedRuleContext(BloonParser.Class_kContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_class_t

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_t" ):
                listener.enterClass_t(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_t" ):
                listener.exitClass_t(self)




    def class_t(self):

        localctx = BloonParser.Class_tContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_class_t)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BloonParser.T__6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(BloonParser.T__6)
                self.state = 149
                self.match(BloonParser.T__7)
                self.state = 150
                self.match(BloonParser.ID)
                self.state = 151
                self.match(BloonParser.T__8)
                self.state = 152
                self.class_k()
                pass
            elif token in [BloonParser.T__1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.class_k()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_kContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_j(self):
            return self.getTypedRuleContext(BloonParser.Class_jContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_class_k

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_k" ):
                listener.enterClass_k(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_k" ):
                listener.exitClass_k(self)




    def class_k(self):

        localctx = BloonParser.Class_kContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_class_k)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(BloonParser.T__1)
            self.state = 157
            self.match(BloonParser.T__9)
            self.state = 158
            self.class_j()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_jContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec(self):
            return self.getTypedRuleContext(BloonParser.Var_decContext,0)


        def class_l(self):
            return self.getTypedRuleContext(BloonParser.Class_lContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_class_j

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_j" ):
                listener.enterClass_j(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_j" ):
                listener.exitClass_j(self)




    def class_j(self):

        localctx = BloonParser.Class_jContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_class_j)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BloonParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.match(BloonParser.T__10)
                self.state = 161
                self.match(BloonParser.T__6)
                self.state = 162
                self.var_dec()
                self.state = 163
                self.match(BloonParser.T__8)
                self.state = 164
                self.class_l()
                pass
            elif token in [BloonParser.T__11, BloonParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.class_l()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_lContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_p(self):
            return self.getTypedRuleContext(BloonParser.Class_pContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_class_l

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_l" ):
                listener.enterClass_l(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_l" ):
                listener.exitClass_l(self)




    def class_l(self):

        localctx = BloonParser.Class_lContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_class_l)
        try:
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BloonParser.T__11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(BloonParser.T__11)
                self.state = 170
                self.match(BloonParser.T__6)
                self.state = 171
                self.class_p()
                pass
            elif token in [BloonParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.match(BloonParser.T__12)
                self.state = 173
                self.match(BloonParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(BloonParser.FuncContext,0)


        def class_p(self):
            return self.getTypedRuleContext(BloonParser.Class_pContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_class_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_p" ):
                listener.enterClass_p(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_p" ):
                listener.exitClass_p(self)




    def class_p(self):

        localctx = BloonParser.Class_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_class_p)
        try:
            self.state = 184
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.func()
                self.state = 177
                self.match(BloonParser.T__8)
                self.state = 178
                self.match(BloonParser.T__12)
                self.state = 179
                self.match(BloonParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.func()
                self.state = 182
                self.class_p()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BloonParser.ID, 0)

        def var_t(self):
            return self.getTypedRuleContext(BloonParser.Var_tContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)




    def var(self):

        localctx = BloonParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(BloonParser.ID)
            self.state = 187
            self.var_t()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_tContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arr_idx(self):
            return self.getTypedRuleContext(BloonParser.Arr_idxContext,0)


        def var_k(self):
            return self.getTypedRuleContext(BloonParser.Var_kContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_var_t

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_t" ):
                listener.enterVar_t(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_t" ):
                listener.exitVar_t(self)




    def var_t(self):

        localctx = BloonParser.Var_tContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_var_t)
        try:
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BloonParser.T__17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.arr_idx()
                self.state = 190
                self.var_k()
                pass
            elif token in [BloonParser.T__1, BloonParser.T__3, BloonParser.T__4, BloonParser.T__6, BloonParser.T__8, BloonParser.T__13, BloonParser.T__15, BloonParser.T__18, BloonParser.T__19, BloonParser.T__23, BloonParser.T__24, BloonParser.T__25, BloonParser.T__26, BloonParser.T__36, BloonParser.T__38, BloonParser.T__39, BloonParser.T__40, BloonParser.T__42, BloonParser.T__43, BloonParser.T__44, BloonParser.T__45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 192
                self.var_k()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_kContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var(self):
            return self.getTypedRuleContext(BloonParser.VarContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_var_k

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_k" ):
                listener.enterVar_k(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_k" ):
                listener.exitVar_k(self)




    def var_k(self):

        localctx = BloonParser.Var_kContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_var_k)
        try:
            self.state = 198
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BloonParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.match(BloonParser.T__13)
                self.state = 196
                self.var()
                pass
            elif token in [BloonParser.T__1, BloonParser.T__3, BloonParser.T__4, BloonParser.T__6, BloonParser.T__8, BloonParser.T__15, BloonParser.T__18, BloonParser.T__19, BloonParser.T__23, BloonParser.T__24, BloonParser.T__25, BloonParser.T__26, BloonParser.T__36, BloonParser.T__38, BloonParser.T__39, BloonParser.T__40, BloonParser.T__42, BloonParser.T__43, BloonParser.T__44, BloonParser.T__45]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec_t(self):
            return self.getTypedRuleContext(BloonParser.Var_dec_tContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_var_dec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_dec" ):
                listener.enterVar_dec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_dec" ):
                listener.exitVar_dec(self)




    def var_dec(self):

        localctx = BloonParser.Var_decContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_dec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 200
            self.match(BloonParser.T__14)
            self.state = 201
            self.var_dec_t()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_dec_tContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BloonParser.ID, 0)

        def arr(self):
            return self.getTypedRuleContext(BloonParser.ArrContext,0)


        def var_dec_k(self):
            return self.getTypedRuleContext(BloonParser.Var_dec_kContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_var_dec_t

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_dec_t" ):
                listener.enterVar_dec_t(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_dec_t" ):
                listener.exitVar_dec_t(self)




    def var_dec_t(self):

        localctx = BloonParser.Var_dec_tContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_var_dec_t)
        try:
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 203
                self.match(BloonParser.ID)
                self.state = 204
                self.arr()
                self.state = 205
                self.var_dec_k()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 207
                self.match(BloonParser.ID)
                self.state = 208
                self.var_dec_k()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_dec_kContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec_t(self):
            return self.getTypedRuleContext(BloonParser.Var_dec_tContext,0)


        def var_type(self):
            return self.getTypedRuleContext(BloonParser.Var_typeContext,0)


        def var_dec_p(self):
            return self.getTypedRuleContext(BloonParser.Var_dec_pContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_var_dec_k

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_dec_k" ):
                listener.enterVar_dec_k(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_dec_k" ):
                listener.exitVar_dec_k(self)




    def var_dec_k(self):

        localctx = BloonParser.Var_dec_kContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_var_dec_k)
        try:
            self.state = 218
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BloonParser.T__15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 211
                self.match(BloonParser.T__15)
                self.state = 212
                self.var_dec_t()
                pass
            elif token in [BloonParser.T__16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 213
                self.match(BloonParser.T__16)
                self.state = 214
                self.var_type()
                self.state = 215
                self.match(BloonParser.T__1)
                self.state = 216
                self.var_dec_p()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_dec_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_dec_t(self):
            return self.getTypedRuleContext(BloonParser.Var_dec_tContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_var_dec_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_dec_p" ):
                listener.enterVar_dec_p(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_dec_p" ):
                listener.exitVar_dec_p(self)




    def var_dec_p(self):

        localctx = BloonParser.Var_dec_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_var_dec_p)
        try:
            self.state = 222
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 220
                self.var_dec_t()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arr_idxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(BloonParser.ExpContext,0)


        def arr_idx_t(self):
            return self.getTypedRuleContext(BloonParser.Arr_idx_tContext,0)


        def getRuleIndex(self):
            return BloonParser.RULE_arr_idx

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArr_idx" ):
                listener.enterArr_idx(self)
